# url-shortener

./: .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 0c5d00aef4c8_add_username_column_2.py  4220298884f5_initial_migration.py  54dbbbcfad1a_migration_11.py  59e83bb23bd6_initial_migration.py  65fc8541a9d2_initial_migration_3.py  6a3f6a462cb1_initial_shortener_schema_migration.py  7e724f41eb74_migration_13.py  91aa329b058f_initial_migration.py  a5b8469f1239_initial_migration_5.py  c18d8ea16ef6_add_a_username_column_to_url_model.py  d007123122b6_initial_migration_9.py  f0856ee3e5b9_migration_12.py  f6c3b6041ad2_initial_migration_10.py
eks/: deploy.yaml  deployment.yaml  service.yaml
kubernetes/: deploy.yaml
minikube/: service.yaml
scripts/: run.sh
terraform/: .terraform.lock.hcl  main.tf  variables.tf  variables.tfvars
terraform-eks/: main.tf  variables.tf  variables.tfvars
terraform/modules/aws-alb/: main.tf
terraform/modules/aws-eks-cluster/: main.tf  outputs.tf
terraform/modules/aws-elasticache/: main.tf  variables.tf
terraform/modules/aws-rds/: main.tf
terraform/modules/aws-vpc/: main.tf  outputs.tf  variables.tf
url_shortener/: exceptions.py
url_shortener/repository/: models.py  redis_repository.py  unit_of_work.py  url_shortener_repository.py
url_shortener/shortener_service/: shortener.py  shortener_service.py
url_shortener/tests/: test_main.py
url_shortener/web/: app.py
url_shortener/web/api/: api.py  schemas.py
