[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = "A cloud-native URL shortener"
authors = ["Koh Jun Jie <koh.jun.jie@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
