[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = "A cloud-native URL shortener"
authors = ["Koh Jun Jie <koh.jun.jie@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.110.0"
snowflake-id = "^1.0.1"
uvicorn = "^0.27.1"
pybase62 = "^1.0.0"
sqlalchemy = "^2.0.28"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
boto3 = "^1.34.68"
redis = {extras = ["hiredis"], version = "^5.0.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
